[BUGFIX] Menu section collapse arrow styling
The arrow for the section collapse buttons in the
menu used the wrong font.

Introducted in Ia0bb003a9c41e8fa89a87f17e971e16138e1721a.

Releases: master, 1.0
Reviewed-on: https://review.typo3.org/26647
Tested-by: Aske Ertmann
Original-Commit-Hash: 966e0f33a3fe655404331ed38cb666a1d7b2c702

--- a/TYPO3.Neos/Resources/Private/Styles/Menu/_MenuPanel.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/Menu/_MenuPanel.scss
@@ -140,7 +140,6 @@
 				position: relative;
 				top: 0;
 				line-height: $unit;
-				font-family: FontAwesome;
 			}
 
 			&.neos-collapsed::before {
